# tetra-rp

./: .dockerignore  .env-example  .gitignore  .gitmodules  .mcp.json  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  README.md  RELEASE_SYSTEM.md  TESTING.md  VERIFICATION.md  pyproject.toml  release-please-config.json  requirements.txt  setup.py  simple_deployment_runtime_example.py  tetra-to-flash-plan.md
.claude/: settings.json
.claude/skills/flash-explorer/: SKILL.md
.claude/skills/tetra-explorer/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  release-please.yml  shared-quality-gates.yml
docs/: CPU_Container_Disk_Sizing.md  Cross_Endpoint_Routing.md  Deployment_Architecture.md  Flash_Apps_and_Environments.md  Flash_Deploy_Guide.md  Flash_SDK_Reference.md  GPU_Provisioning.md  LoadBalancer_Runtime_Architecture.md  Load_Balancer_Endpoints.md  PRD.md  Resource_Config_Drift_Detection.md  Runtime_Generic_Handler.md  Using_Remote_With_LoadBalancer.md  resource_config_drift_detection.md
examples/: example.py  image_gen.py  matrix_operations.py
protos/: remote_execution.proto
scripts/: ast_to_sqlite.py  code_intel.py  mcp_code_intel_server.py  test-image-constants.py  validate-wheel.sh  verify-image-constants.sh  verify-manifest-constants.sh
src/runpod_flash/: __init__.py  client.py  config.py  logger.py
src/runpod_flash/cli/: main.py
src/runpod_flash/cli/commands/: apps.py  build.py  deploy.py  env.py  init.py  login.py  (+4 more)
src/runpod_flash/core/: credentials.py  discovery.py  exceptions.py  validation.py
src/runpod_flash/protos/: remote_execution.proto  remote_execution.py  remote_execution_pb2.py
src/runpod_flash/runtime/: __init__.py  circuit_breaker.py  config.py  exceptions.py  generic_handler.py  lb_handler.py  load_balancer.py  manifest_fetcher.py  metrics.py  models.py  mothership_provisioner.py  production_wrapper.py  reliability_config.py  retry_manager.py  serialization.py  service_registry.py  state_manager_client.py
src/runpod_flash/stubs/: __init__.py  live_serverless.py  load_balancer_sls.py  registry.py
src/tetra_rp/: __init__.py  client.py  config.py  endpoint.py  execute_class.py  logger.py  prod_builder.py  prod_builder.py.bak  prod_config.py  serialization_utils.py  simple_runtime_two.py
src/tetra_rp/cli/: main.py
src/tetra_rp/cli/utils/skeleton_template/: .env  .env.example  README.md  main.py  mothership.py  pyproject.toml  requirements.txt
src/tetra_rp/cli/utils/skeleton_template/workers/cpu/: __init__.py  endpoint.py
src/tetra_rp/cli/utils/skeleton_template/workers/example/: __init__.py  endpoint.py
src/tetra_rp/cli/utils/skeleton_template/workers/gpu/: __init__.py  endpoint.py
src/tetra_rp/cli/utils/skeleton_template/workers/interface/: __init__.py  endpoint.py
src/tetra_rp/core/: deployment.py  discovery.py  exceptions.py  validation.py
src/tetra_rp/deployment_runtime/: __init__.py  client.py  config.py  endpoint.py  exceptions.py  integration.py  serialization.py
src/tetra_rp/protos/: remote_execution.proto  remote_execution.py  stubs.py
src/tetra_rp/runtime/: __init__.py  circuit_breaker.py  config.py  directory_client.py  exceptions.py  generic_handler.py  http_client.py  lb_handler.py  load_balancer.py  manifest_client.py  metrics.py  mothership_provisioner.py  production_wrapper.py  reliability_config.py  retry_manager.py  service_registry.py  state_manager_client.py  unpack_volume.py
src/tetra_rp/stubs/: live_serverless.py  load_balancer_sls.py  registry.py  serverless.py
test-project/: .gitignore  README.md  main.py  requirements.txt
test-project/workers/: __init__.py  example_worker.py
tests/: conftest.py
tests/integration/: __init__.py  test_class_execution_integration.py  test_cpu_disk_sizing.py  test_cross_endpoint_routing.py  test_deploy_send_flow.py  test_lb_remote_execution.py  test_mothership_provisioning.py  test_remote_concurrency.py  test_run_auto_provision.py  test_state_manager_client.py
tests/unit/: test_api_key_validation.py  test_async_function_support.py  test_class_caching.py  test_concurrency_issues.py  test_deployment.py  test_deployment_config.py  test_discovery.py  test_dotenv_loading.py  test_execute_class.py  test_file_locking.py  test_handler_discovery.py  test_live_serverless_stub.py  test_load_balancer_sls_core.py  test_load_balancer_sls_endpoint.py  test_load_balancer_sls_health_checks.py  test_load_balancer_sls_resource.py  test_load_balancer_sls_serialization.py  test_load_balancer_sls_stub.py  test_remote_decorator_integration.py  test_resource_identity.py  test_skeleton.py
tests/unit/cli/: test_apps.py  test_deploy.py  test_env.py  test_run.py  test_undeploy.py  testutil.py
tests/unit/resources/: __init__.py  test_app.py  test_cpu.py  test_cpu_load_balancer.py  test_gpu_ids.py  test_live_load_balancer.py  test_live_serverless.py  test_load_balancer_drift.py  test_network_volume.py  test_resource_manager.py  test_serverless.py  test_serverless_cpu.py  test_smart_disk_sizing.py
tests/unit/runtime/: __init__.py  test_circuit_breaker.py  test_directory_client.py  test_generic_handler.py  test_http_client.py  test_lb_handler.py  test_load_balancer.py  test_manifest_client.py  test_manifest_fetcher.py  test_mothership_provisioner.py  test_production_wrapper.py  test_reliability_config.py  test_retry_manager.py  test_serialization.py  test_service_registry.py  test_state_manager_client.py  test_unpack_volume.py
tetra/: Dockerfile  __init__.py  client.py  client_manager.py  logger.py  remote_execution_pb2.py  remote_execution_pb2_grpc.py  resource_manager.py  runpod.py  runpod_handler.py  server.py
tetra/core/client/: client_manager.py  remote_execution.py
tetra/core/pool/: cluster_manager.py  dataclass.py  ex.py  worker.py
tetra/core/resources/: __init__.py  base.py  gpu.py  live_serverless.py  resource_manager.py  serverless.py  utils.py
tetra/core/utils/: json.py  logger.py  singleton.py  terminal.py
tetra/protos/: remote_execution.py
(+136 files in other folders)
