[project]
name = "tetra_rp"
version = "0.8.0"
description = "A Python library for distributed inference and serving of machine learning models"
authors = [
    { name = "Marut Pandya", email = "pandyamarut@gmail.com" },
    { name = "Patrick Rachford", email = "prachford@icloud.com" },
    { name = "Dean Quinanola", email = "dean.quinanola@runpod.io" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<3.14"

dependencies = [
    "cloudpickle>=3.1.1",
    "runpod~=1.7.9",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.9",
]
test = [
    "mypy>=1.16.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "twine>=6.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
